--- a/gschem/po/zh_TW.po
+++ b/gschem/po/zh_TW.po
@@ -277,30 +277,36 @@ msgstr ""
 "適銷性或特定用途的適用性，在一定程度上\n"
 "法律允許.\n"
 
+# error parsing; Cuòwù jiěxī
 #: gschem/src/base/gschem_parsecmd.c:256
 msgid "error parsing"
-msgstr ""
+msgstr "錯誤解析"
 
+# ERROR; Cuòwù
 #: gschem/src/base/gschem_parsecmd.c:292 gschem/src/x/x_rc.c:100
 #: gschem/src/x/x_rc.c:145
 msgid "ERROR"
-msgstr ""
+msgstr "錯誤"
 
+# option requires an argument; Xuǎnxiàng xūyào yīgè cānshù
 #: gschem/src/base/gschem_parsecmd.c:296
 msgid "option requires an argument"
-msgstr ""
+msgstr "Xuǎnxiàng xūyào yīgè cānshù"
 
+# Unknown option; Wèizhī xuǎnxiàng
 #: gschem/src/base/gschem_parsecmd.c:302
 msgid "Unknown option"
-msgstr ""
+msgstr "未知選項"
 
+# Unknown option character; Wèizhī xuǎnxiàng zìfú
 #: gschem/src/base/gschem_parsecmd.c:308
 msgid "Unknown option character"
-msgstr ""
+msgstr "未知選項字符"
 
+# help for more information; Bāngzhù huòqǔ gèng duō xìnxī
 #: gschem/src/base/gschem_parsecmd.c:315
 msgid "help for more information"
-msgstr ""
+msgstr "幫助獲取更多信息"
 
 #: gschem/src/base/gschem_parsecmd.c:317
 msgid "Run"
