--- a/gschem/po/pl.po
+++ b/gschem/po/pl.po
@@ -766,19 +766,19 @@ msgstr "Nie znaleziono żadnego schematu wyżej w hierarchii!\n"
 
 #: gschem/src/iface/i_command.c:3597
 msgid "Object is attached to something\n"
-msgstr ""
+msgstr "Obiekt jest do czegoś przywiązany\n"
 
 #: gschem/src/iface/i_command.c:4003
 msgid "Attribute is already attached\n"
-msgstr ""
+msgstr "Atrybut jest już dołączony\n"
 
 #: gschem/src/iface/i_command.c:4417
 msgid "WARNING: Do not translate with snap off!\n"
-msgstr ""
+msgstr "OSTRZEŻENIE: Nie tłumacz z oderwaniem!\n"
 
 #: gschem/src/iface/i_command.c:4418
 msgid "WARNING: Turning snap on and continuing with translation.\n"
-msgstr ""
+msgstr "OSTRZEŻENIE: Włączanie przyciągania i kontynuacja tłumaczenia.\n"
 
 #: gschem/src/iface/i_command.c:4424
 msgid "WARNING: Snap grid size is not equal to 100!\n"
@@ -788,7 +788,8 @@ msgstr "UWAGA: Rozmiar siatki przyciągania jest inny niż 100!\n"
 msgid ""
 "WARNING: If you are translating a symbol to the origin, the snap grid size "
 "should be set to 100\n"
-msgstr ""
+msgstr "OSTRZEŻENIE: Jeśli tłumaczysz symbol na początek, rozmiar siatki "
+"przyciągania powinien być ustawiony na 100\n"
 
 #: gschem/src/iface/i_command.c:4637
 msgid "Grid OFF\n"
