--- a/gschem/po/fi.po
+++ b/gschem/po/fi.po
@@ -1003,11 +1003,12 @@ msgstr "Tallenna _kaikki"
 
 #: gschem/src/iface/i_sessions.c:886
 msgid "Failed to remove session"
-msgstr ""
+msgstr "Istunnon poistaminen epäonnistui"
 
+# Could not remove session
 #: gschem/src/iface/i_sessions.c:889
 msgid "<b>Could not remove session</b>"
-msgstr ""
+msgstr "<b>Istuntoa ei voitu poistaa</b>"
 
 # There are no saved sessions
 #: gschem/src/iface/i_sessions.c:940
