--- a/gschem/po/da.po
+++ b/gschem/po/da.po
@@ -1017,23 +1017,23 @@ msgstr "<b>Kunne ikke fjerne session</b>"
 #: gschem/src/iface/i_sessions.c:940
 #, c-format
 msgid "There are no saved sessions"
-msgstr ""
+msgstr "Der er ingen gemte sessioner"
 
 #: gschem/src/iface/i_sessions.c:968
 msgid "created with"
-msgstr ""
+msgstr "oprettet med"
 
 #: gschem/src/iface/i_sessions.c:976
 msgid "An error occurred attempting to create session"
-msgstr ""
+msgstr "Der opstod en fejl under forsøg på at oprette session"
 
 #: gschem/src/iface/i_sessions.c:986 gschem/src/iface/i_sessions.c:1170
 msgid "<b>Session Error</b>"
-msgstr ""
+msgstr "<b>Sessionsfejl</b>"
 
 #: gschem/src/iface/i_sessions.c:986
 msgid "Creation failed"
-msgstr ""
+msgstr "Error de sessió"
 
 #: gschem/src/iface/i_sessions.c:1030
 msgid "Opened session"
