gschem: update Greek translations

--- a/gschem/po/el.po
+++ b/gschem/po/el.po
@@ -225,26 +225,28 @@ msgstr ""
 "  -g, --guile <DIR>          Προσθήκη καταλόγου στη διαδρομή guile (προ-διαμόρφωση).\n"
 "  -f, --font <NAME>          ορισμός ονόματος οικογένειας γραμματοσειρών\n"
 "  -h, --help                 Βοήθεια; αυτό το μήνυμα.\n"
-"  -l, --list                 List saved session names.\n"
-"  -m, --safe-mode            Safe Mode.\n"
-"  -n, --no-auto              No auto load last document.\n"
-"  -o, --output <ΑΡΧΕΙΟ>      Output filename (for printing and image "
-"output).\n"
-"  -p, --place                Automatically place the window.\n"
-"  -q, --quiet                Quiet mode.\n"
-"  -r, --run <ΑΡΧΕΙΟ>         Scheme script to run at startup.\n"
-"  -s, --start <name>         Startup using the given session name.\n"
-"  -t, --title-block <ΑΡΧΕΙΟ> Start a new drawing using the specified title-"
-"block.\n"
-"  -u, --undo-dir <DIR>       Specify a temporary directory for Undo files.\n"
-"  -v, --verbose              Verbose mode.\n"
-"  -V, --version              Show version information.\n"
-"  -x (EXPR)                  Scheme expression to run at startup.\n"
-"  -z, --minimized            Hide the main window, used for scripting\n"
-"  --                         Treat all remaining arguments as filenames.\n"
+"  -l, --list                 Λίστα αποθηκευμένων ονομάτων συνεδρίας.\n"
+"  -m, --safe-mode            Λειτουργία ασφαλείας.\n"
+"  -n, --no-auto              Χωρίς αυτόματη φόρτωση τελευταίου εγγράφου.\n"
+"  -o, --output <ΑΡΧΕΙΟ>      Όνομα αρχείου εξόδου (για εκτύπωση και έξοδο "
+"εικόνας).\n"
+"  -p, --place                Τοποθετήστε αυτόματα το παράθυρο.\n"
+"  -q, --quiet                Ήσυχη λειτουργία.\n"
+"  -r, --run <ΑΡΧΕΙΟ>         Σενάριο σχήματος για εκτέλεση κατά την εκκίνηση.\n"
+"  -s, --start <name>         Εκκίνηση χρησιμοποιώντας το δεδομένο όνομα περιόδου "
+"σύνδεσης.\n"
+"  -t, --title-block <ΑΡΧΕΙΟ> Ξεκινήστε ένα νέο σχέδιο χρησιμοποιώντας το  "
+"καθορισμένο μπλοκ τίτλου.\n"
+"  -u, --undo-dir <DIR>       Καθορίστε έναν προσωρινό κατάλογο για αναίρεση αρχείων.\n"
+"  -v, --verbose              Λειτουργία ρήματος.\n"
+"  -V, --version              Εμφάνιση πληροφοριών έκδοσης.\n"
+"  -x (EXPR)                  Έκφραση σχήματος για εκτέλεση κατά την εκκίνηση.\n"
+"  -z, --minimized            Απόκρυψη του κύριου παραθύρου, που χρησιμοποιείται "
+"για δέσμες ενεργειών\n"
+"  --                         Αντιμετωπίστε όλα τα υπόλοιπα ορίσματα ως ονόματα αρχείων.\n"
 "\n"
-"Report bugs at <https://bugs.launchpad.net/geda>\n"
-"gEDA homepage: <http://www.geda-project.org>\n"
+"Αναφορά σφαλμάτων στο <https://bugs.launchpad.net/geda>\n"
+"gEDA αρχική σελίδα: <http://www.geda-project.org>\n"
 
 #: gschem/src/base/gschem_parsecmd.c:131
 msgid ""
