--- a/gschem/po/fi.po
+++ b/gschem/po/fi.po
@@ -1018,19 +1018,19 @@ msgstr "Ei tallennettuja istuntoja"
 
 #: gschem/src/iface/i_sessions.c:968
 msgid "created with"
-msgstr ""
+msgstr "created with"
 
 #: gschem/src/iface/i_sessions.c:976
 msgid "An error occurred attempting to create session"
-msgstr ""
+msgstr "Istunnon luomisessa tapahtui virhe"
 
 #: gschem/src/iface/i_sessions.c:986 gschem/src/iface/i_sessions.c:1170
 msgid "<b>Session Error</b>"
-msgstr ""
+msgstr "<b>Istunnon virhe</b>"
 
 #: gschem/src/iface/i_sessions.c:986
 msgid "Creation failed"
-msgstr ""
+msgstr "Istunnon virhe"
 
 #: gschem/src/iface/i_sessions.c:1030
 msgid "Opened session"
