--- a/gschem/po/sl.po
+++ b/gschem/po/sl.po
@@ -995,19 +995,19 @@ msgstr "Seznam shranjenih imen sej"
 
 #: gschem/src/iface/i_sessions.c:968
 msgid "created with"
-msgstr ""
+msgstr "ustvarjeno z"
 
 #: gschem/src/iface/i_sessions.c:976
 msgid "An error occurred attempting to create session"
-msgstr ""
+msgstr "Pri poskusu ustvarjanja seje je prišlo do napake"
 
 #: gschem/src/iface/i_sessions.c:986 gschem/src/iface/i_sessions.c:1170
 msgid "<b>Session Error</b>"
-msgstr ""
+msgstr "<b>Napaka seje</b>"
 
 #: gschem/src/iface/i_sessions.c:986
 msgid "Creation failed"
-msgstr ""
+msgstr "Napaka seje"
 
 # Opened session
 #: gschem/src/iface/i_sessions.c:1030
